# libict-dev-tools

./: CMakeLists-template.cmake  CMakeLists.template  Dockerfile.alpine.latest  Dockerfile.debian.latest  Dockerfile.fedora.latest  Dockerfile.ubuntu.latest  README.md  configure.sh  cpack-include.cmake  git-include.cmake  info-include.cmake  init-new-git-repo.sh  libict-dev-tools  libs-include.cmake  link-headers.sh  test-include.cmake  test.sh  update-files.sh
source/: CMakeLists.txt  test.cpp  test.hpp
